--- a/yaml/pn/ressources.yml
+++ b/yaml/pn/ressources.yml
@@ -108,3 +108,10 @@ S6:
   R6.06: "Veille technologique"
   R6.07: "Pilotage de solutions Cloud pour l'entreprise"
   R6.08: "Pilotage et valorisation d'un projet R&T"
+SC:
+  RC.01: "Anglais complémentaire : Préparation à et passation de la certification obligatoire"
+  RC.02: "Virtualisation avancée"
+  RC.03: "Mathématiques : Probabilités discrètes"
+  RC.04: "Mathématiques : Probabilités continues"
+  RC.05: "Mathématiques : Statistiques"
+  RC.06: "Mathématiques : Graphes et matrices"
